opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-unix"
bug-reports:  "https://github.com/mirage/mirage-unix/issues/"
dev-repo:     "https://github.com/mirage/mirage-unix.git"
license:      "ISC"
build:   [make "build"]
install: [make "install" "PREFIX=%{prefix}%"]
remove:  [make "uninstall" "PREFIX=%{prefix}%"]

depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "cstruct" {>= "1.0.1"}
  "lwt" {>= "2.4.3"}
  "mirage-clock-unix" {>= "1.0.0"}
  "shared-memory-ring" {>= "1.0.0"}
  "mirage-profile" {>= "0.3"}
  "logs"
  "io-page-unix" {>= "2.0.0"}
]
available: [ocaml-version >= "4.04.2"]
tags: "org:mirage"
